<resources>
    <string name="app_name">Virtual Pet Pompi</string>
    <string name="channel_name">Hunger Notification</string>
    <string name="channel_description">Channel for hunger notifications</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="steps">steps</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="notification_title">The virtual pet is counting your steps</string>
    <string name="average">Average</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="total">Total</string>
    <string name="record">Record</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="_10_000">10.000</string>
    <string name="steps_record">Steps Record</string>
    <string name="your_pet_died">Your pet died! \n Reinstall the app</string>
    <string name="_100">100%</string>
    <string name="back">back</string>
    <string name="coins">coins</string>
    <string name="your_activity_is_not">Your activity is not being recorded anywhere, so feel free to accept the permission and enjoy this amazing free virtual pet</string>
    <string name="we_do_not">We do not collect any user data!</string>
    <string name="credits">Credits</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="show_steps">Show Steps</string>
    <string name="pompi_ls">rares.dan.g@proton.me</string>
    <string name="contact">Contact</string>
    <string name="developer_dan_rares">Developer: Dan Rares</string>
    <string name="_0">0</string>
    <string name="shop">shop</string>
    <string name="settings">settings</string>
    <string name="easy_mode">easy mode</string>
    <string name="normal_mode">normal Mode</string>
    <string name="background">background</string>
    <string name="inventory">Inventory</string>
    <string name="please_buy">Please buy me some food :(</string>
    <string name="heart">heart</string>
    <string name="pompi">POMPI</string>
    <string name="hunger">hunger</string>
    <string name="steps_money">Steps = money</string>
    <string name="money_food">money = food</string>
    <string name="food_happy_pet">food = happy pet</string>
    <string name="if_you_manage">If you manage to keep you pet happy, it means that you manage to walk enough to keep yourself healthy. Congrats!</string>
    <string name="for_further">For further questions do not be shy, contact us.</string>
    <string name="you_only">You only need to feed your pet, easy right? Well, in order to do that you need to walk and walk and walk even more! To make money, you need to make steps, and then you can buy food to feed your cute pet</string>
    <string name="your_cute">Your cute virtual Pet</string>
    <string name="achievements">Achievements</string>
    <string name="_10k">10K</string>
    <string name="_20k">20K</string>
    <string name="_30k">30K</string>
    <string name="channel_name_steps">Steps Notification</string>
    <string name="channel_description_steps">Get the number of steps taken</string>
    <string name="description_check">Check on your pet!</string>
    <string name="description_title">Your pet might be hungry go and feed it.</string>
    <string name="channel_id">hunger</string>
    <string name="change_the_difficulty">Change the Difficulty</string>
    <string name="caution">Caution!!! If you change the difficulty, all progress will be erased!!</string>
    <string name="left">←←←←←←←←←←←←</string>
</resources>