<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70ffbd"
    android:padding="5dp"
    tools:context=".activity.StatisticsActivity">

    <org.eazegraph.lib.charts.PieChart xmlns:ggg="http://schemas.android.com/apk/res-auto"
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        ggg:egHighlightStrength="1"
        ggg:egInnerPadding="75"
        ggg:egLegendHeight="0dp" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/_10_000"
        android:textColor="@color/black"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/steps"
        android:layout_centerHorizontal="true"
        android:text="@string/steps"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/averageandtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graph"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black">

        <TextView
            android:id="@+id/average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/averageandtotaltext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/averageandtotal"
        android:textColor="@color/black">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/average"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <org.eazegraph.lib.charts.BarChart xmlns:ggg="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bargraph"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/averageandtotaltext"
        android:layout_marginTop="50dp"
        ggg:egLegendHeight="35dp"
        ggg:egLegendTextSize="15sp"
        ggg:egShowValues="true" />

    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bargraph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="114dp"
        android:gravity="center"
        android:text="@string/steps_record"
        android:fontFamily="@font/gluten_bold"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/recordvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginEnd="138dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goBackFromStatisticsToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/deep_space"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true" />

</RelativeLayout>